2011-02-01  Darin Fisher  <darin@chromium.org>

Reviewed by Eric Seidel.

        Fix some Visual Studio compiler warnings.
        https://bugs.webkit.org/show_bug.cgi?id=53476

        * wtf/MathExtras.h:
        (clampToInteger):
        (clampToPositiveInteger):
        * wtf/ThreadingWin.cpp:
        (WTF::absoluteTimeToWaitTimeoutInterval):
2011-02-01  Darin Fisher  <darin@chromium.org>

        Reviewed by Eric Seidel.

        Fix some Visual Studio compiler warnings.
        https://bugs.webkit.org/show_bug.cgi?id=53476

        * src/GraphicsContext3DChromium.cpp:
        (WebCore::GraphicsContext3DInternal::paintRenderingResultsToCanvas):
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::forms):
        * src/WebMediaPlayerClientImpl.cpp:
        (WebKit::WebMediaPlayerClientImpl::repaint):
        * src/WebScrollbarImpl.cpp:
        (WebKit::WebScrollbarImpl::setValue):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::doPixelReadbackToCanvas):
        (WebKit::WebViewImpl::setZoomLevel):
        (WebKit::WebViewImplScrollbarPaintInterface::paint):

Canonical link: https://commits.webkit.org/67356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77242 268f45cc-cd09-0410-ab3c-d52691b4dbfc